--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@chika/auth": "*",
     "@chika/prisma": "*",
+    "@chika/trpc": "*",
     "@chika/tailwind-config": "*",
     "@tanstack/react-query": "^4.16.1",
     "@trpc/client": "^10.1.0",
