--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chika",
   "private": true,
-  "packageManager": "pnpm@7.13.0",
+  "packageManager": "yarn@1.22.19",
   "workspaces": [
     "packages/**",
     "apps/*"
