--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -8,7 +8,7 @@
     "clean": "rm -rf .turbo node_modules",
     "with-env": "dotenv -e ../../.env --",
     "dev": "yarn with-env prisma studio --port 5556",
-    "db-push": "pnpm with-env prisma db push",
+    "db-push": "yarn with-env prisma db push",
     "db-generate": "yarn prisma generate"
   },
   "dependencies": {
