--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -6,15 +6,19 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "with-env": "dotenv -e ../../.env --",
-    "db-push": "pnpm with-env prisma db push",
-    "db-generate": "pnpm with-env prisma generate"
+    "lint": "eslint . --ext .ts,.tsx",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "ioredis": "^5.0.0"
+    "@chika/auth": "*",
+    "@chika/prisma": "*",
+    "@trpc/client": "^10.1.0",
+    "@trpc/server": "^10.1.0",
+    "superjson": "^1.9.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
-    "dotenv-cli": "^6.0.0",
+    "eslint": "^8.28.0",
     "typescript": "^4.9.3"
   }
 }
