--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,39 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
     "clean": "rm -rf .next .turbo node_modules",
+    "dev": "next dev",
     "start": "next start",
-    "lint": "next lint",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@chika/auth": "*",
     "@chika/prisma": "*",
-    "@chika/trpc": "*",
     "@chika/tailwind-config": "*",
-    "@tanstack/react-query": "^4.16.1",
-    "@trpc/client": "^10.1.0",
-    "@trpc/next": "^10.1.0",
-    "@trpc/react-query": "^10.1.0",
-    "@trpc/server": "^10.1.0",
-    "next": "^13.0.5",
-    "next-auth": "^4.17.0",
-    "dotenv": "^16.0.1",
+    "@chika/trpc": "*",
+    "@tanstack/react-query": "^4.20.4",
+    "@trpc/client": "^10.6.0",
+    "@trpc/next": "^10.6.0",
+    "@trpc/react-query": "^10.6.0",
+    "@trpc/server": "^10.6.0",
+    "antd": "^5.0.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "next": "^13.0.7",
+    "next-auth": "^4.18.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.18.0"
+    "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.25",
+    "@types/cors": "^2.8.13",
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.28.0",
-    "eslint-config-next": "13.0.4",
-    "postcss": "^8.4.19",
+    "next-transpile-modules": "^10.0.0",
+    "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   }
 }
