--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "chika",
   "private": true,
-  "packageManager": "yarn@1.22.19",
   "workspaces": [
     "packages/**",
     "apps/*"
@@ -13,18 +12,32 @@
     "db-generate": "turbo db-generate",
     "db-push": "turbo db-push",
     "dev": "turbo dev --parallel",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "lint": "turbo lint && manypkg check",
+    "format": "prettier --cache --write .",
     "type-check": "turbo type-check"
   },
-  "dependencies": {
+  "lint-staged": {
+    "*.{jsx,less,md,json}": [
+      "prettier --write"
+    ],
+    "*.ts?(x)": [
+      "prettier --parser=typescript --write"
+    ]
+  },
+  "devDependencies": {
     "@manypkg/cli": "^0.19.2",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "eslint": "^8.28.0",
-    "prettier": "^2.7.1",
+    "@types/node": "^17.0.45",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
+    "only-allow": "^1.1.1",
+    "prettier": "^2.8.1",
+    "prettier-plugin-organize-imports": "^3.2.1",
+    "prettier-plugin-packagejson": "^2.3.0",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "turbo": "^1.5.5",
-    "typescript": "^4.9.3"
+    "turbo": "^1.6.3",
+    "typescript": "^4.9.4"
+  },
+  "packageManager": "yarn@1.22.19",
+  "engines": {
+    "node": "^14.18.0 || >=16.0.0"
   }
 }
