--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -1,22 +1,21 @@
 {
   "name": "@chika/prisma",
   "version": "0.1.0",
+  "license": "MIT",
   "main": "./index.ts",
   "types": "./index.ts",
-  "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "with-env": "dotenv -e ../../.env --",
-    "dev": "yarn with-env prisma studio --port 5556",
-    "db-push": "yarn with-env prisma db push",
-    "db-generate": "yarn prisma generate"
+    "db-generate": "yarn prisma generate",
+    "db-push": "yarn prisma db push",
+    "dev2": "yarn prisma studio --port 5556"
   },
   "dependencies": {
-    "@prisma/client": "^4.6.1"
+    "@prisma/client": "^4.7.1"
   },
   "devDependencies": {
     "dotenv-cli": "^6.0.0",
-    "prisma": "^4.6.1",
-    "typescript": "^4.9.3"
+    "prisma": "^4.7.1",
+    "typescript": "^4.9.4"
   }
 }
