--- a/packages/trpc/tsconfig.json
+++ b/packages/trpc/tsconfig.json
@@ -1,9 +1,4 @@
 {
   "extends": "../../tsconfig.json",
-  "include": [
-    "src",
-    "index.ts",
-    "transformer.ts",
-    "node_modules/@chika/auth/next-auth.d.ts"
-  ]
+  "include": ["src", "index.ts", "transformer.ts", "node_modules/@chika/auth/next-auth.d.ts"]
 }
