--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@chika/ui",
   "version": "0.1.0",
+  "license": "MIT",
   "main": "./index.ts",
   "types": "./index.ts",
-  "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "with-env": "dotenv -e ../../.env --",
+    "db-generate": "yarn with-env prisma generate",
     "db-push": "yarn with-env prisma db push",
-    "db-generate": "yarn with-env prisma generate"
+    "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "ioredis": "^5.0.0"
+    "ioredis": "^5.2.4"
   },
   "devDependencies": {
     "dotenv-cli": "^6.0.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   }
 }
