--- a/renovate.json
+++ b/renovate.json
@@ -5,15 +5,7 @@
   "commitMessageExtra": "to {{newValue}}",
   "commitMessageTopic": "{{depName}}",
   "extends": ["config:base", ":preserveSemverRanges"],
-  "ignoreDeps": [
-    "zx",
-    "node",
-    "dite",
-    "@dite/nest",
-    "@dite/node",
-    "@dite/react",
-    "@dite/vue"
-  ],
+  "ignoreDeps": ["zx", "node", "dite", "@dite/nest", "@dite/node", "@dite/react", "@dite/vue"],
   "ignorePaths": ["fixtures", "test/"],
   "postUpdateOptions": ["yarnDedupeHighest"],
   "packageRules": [
