feat: update console

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,6 @@
     "source.fixAll": true
   },
   "[typescriptreact]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
