--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.2.0",
+    "@ant-design/icons": "^4.8.0",
     "@chika/auth": "*",
     "@chika/prisma": "*",
     "@chika/tailwind-config": "*",
