--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "@trpc/react-query": "^10.6.0",
     "@trpc/server": "^10.6.0",
     "antd": "^5.0.7",
+    "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "next": "^13.0.7",
